# robotics-teaching-kit-with-jet

./: .gitignore  README.md
docs/: Syllabus.md  build_tk.py  make_labs.py
docs/module1/NVidia Robotics Kit-with-jet-TX1/lab1_building_robot/: README.md~  lab1_electronics.md
docs/module1/lab1_building_robot/: lab1_Jetson_TK1_configuration.md  lab1_Jetson_TX1_configuration  lab1_chassis_construction.md  lab1_electronics.md  lab1_wiring.md  setup_jetson.py
docs/module1/lab1_building_robot/code/jethost/: jethost_install.sh
docs/module1/lab1_building_robot/code/jetlabs/lab2_sense_and_avoid/: CMakeLists.txt
docs/module1/lab1_building_robot/code/jetlabs/lab2_sense_and_avoid/launch/: lab2.launch
docs/module1/lab1_building_robot/code/jetlabs/lab2_sense_and_avoid/src/: sense_and_avoid.cpp
docs/module1/lab1_building_robot/code/jetlabs/lab5_dead_reckoning/: CMakeLists.txt  package.xml
docs/module1/lab1_building_robot/code/jetlabs/lab5_dead_reckoning/src/: dead_reckoning.cpp~
docs/module1/lab1_building_robot/code/jetlabs/lab6_planning/: CMakeLists.txt  package.xml
docs/module1/lab1_building_robot/code/jetlabs/lab6_planning/include/lab6_planning/: planner.h
docs/module1/lab1_building_robot/code/jetlabs/lab6_planning/src/: location.cpp  path_test.cpp  planner.cpp
docs/module1/lab1_building_robot/code/jetlabs/lab8_line_follower/: CMakeLists.txt
docs/module1/lab2_ros_introduction/: lab2_ros_introduction.md
docs/module1/questions/: module1_answers.md  module1_questions.md
docs/module2/lab2_sense_and_avoid/: lab2_sense_and_avoid.md
docs/module2/lab2_sense_and_avoid/code/: package.xml
docs/module2/lab2_sense_and_avoid/solution/: package.xml
docs/module2/lab3_sense_and_avoid/: lab3_sense_and_avoid.md
docs/module2/questions/: module2_answers.md  module2_questions.md
docs/module2/quizzes/: module2_answers.md
docs/module3/lab3_computer_vision/: lab3_computer_vision.md
docs/module3/lab3_computer_vision/solution/: CMakeLists.txt  package.xml
docs/module3/lab3_computer_vision/solution/launch/: lab3_track.launch
docs/module3/lab3_computer_vision/solution/src/: basic_cv.cpp  vision_tracking.cpp
docs/module3/lab4_opencv_intro/: lab4_opencv_intro.md
docs/module3/lab4_opencv_intro/solution/: basic_cv.cpp  line_follower.cpp
docs/module3/lab5_object_tracking/: lab5_object_tracking.md
docs/module3/questions/: module3_answers.md  module3_questions.md
docs/module4/lab4_autonomous_driving/: lab4_autonomous_driving.md
docs/module4/lab4_autonomous_driving/code/: package.xml
docs/module4/lab4_autonomous_driving/solution/: CMakeLists.txt
docs/module4/lab4_autonomous_driving/solution/launch/: lab4_train.launch
docs/module4/lab4_autonomous_driving/solution/scripts/: preprocess.py
docs/module4/lab4_autonomous_driving/solution/src/: drive_inference.cpp
docs/module4/quizzes/: module4_questions.md
docs/module5/lab5_dead_reckoning/: lab5_dead_reckoning.md
docs/module5/lab5_dead_reckoning/solution/: CMakeLists.txt  package.xml
docs/module5/lab5_dead_reckoning/solution/launch/: lab5.launch
docs/module5/lab5_dead_reckoning/solution/src/: dead_reckoning.cpp
docs/module5/quizzes/: module5_answers.md  module5_questions.md
docs/module6/lab6_path_planning/: lab6_path_planning.md
docs/module6/lab6_path_planning/code/: CMakeLists.txt
docs/module6/lab6_path_planning/solution/: global_planner_plugin.xml  package.xml
docs/module6/questions/: module6_questions.md
docs/module6/quizzes/: module6_answers.md
docs/module7/lab7_line_follower/: lab7_line_follower.md
docs/module7/lab7_line_follower/code/: CMakeLists.txt  package.xml
docs/module7/lab7_line_follower/code/src/: line_detector.cpp
docs/module7/lab7_line_follower/solution/: CMakeLists.txt
docs/module7/quizzes/: module7_answers.md  module7_questions.md
docs/module8/lab8_line_follower/: lab8_line_follower.md
docs/module8/lab8_line_follower/code/lab8_line_follower/: package.xml
docs/module8/lab8_line_follower/code/lab8_line_follower/launch/: lab8.launch
docs/module8/lab8_line_follower/code/lab8_line_follower/src/: line_detector.cpp
docs/module8/lab8_localization/: lab8_localization.md
docs/module8/lab8_localization/code/: package.xml
docs/module8/lab8_localization/solution/: CMakeLists.txt  Segment.cfg
docs/module8/lab8_localization/solution/include/: Localization.h
docs/module8/lab8_localization/solution/launch/: lab8_localize.launch  lab8_setup.launch
docs/module8/lab8_localization/solution/src/: line_detector.cpp  line_pid.cpp  localization.cpp
docs/module8/questions/: module8_answers.md
docs/module8/quizzes/: module8_questions.md
docs/module9/lab9_mapping/: lab9_mapping.md
docs/module9/lab9_mapping/code/src/: mapping.cpp
docs/module9/lab9_mapping/solution/: CMakeLists.txt  package.xml
docs/module9/lab9_mapping/solution/launch/: lab9.launch
docs/module9/lab9_mapping/solution/src/: mapping.cpp
docs/module9/questions/: module9_answers.md
docs/module9/quizzes/: module9_questions.md
docs/projects/: Capture-the-Flag.md  ColorFollower.md  Harvester.md
docs/support/: template.tex
examples/src/circle_counting/: CIRCLE_COUNTING.md  CMakeLists.txt  package.xml
examples/src/circle_counting/src/: circle_counting.cpp
examples/src/edge_detection/: CMakeLists.txt  EDGE_DETECTION.md  package.xml
examples/src/edge_detection/src/: edge_detection.cpp
examples/src/face_follower/: CMakeLists.txt  FACE_FOLLOWER.md  package.xml
examples/src/face_follower/src/: face_follower.cpp
examples/src/line_follower/: CMakeLists.txt  LINE_FOLLOWER.md  package.xml
examples/src/line_follower/src/: line_follower.cpp
examples/src/sense_and_avoid/: SENSE_AND_AVOID.md  package.xml
hardware/: 2Platform.ai  CameraHolder.ai  FiveSonarArrangement.ai  Jet-Logo-Plate-2color.ai  Jet-Logo-Plate.ai  SonarSensorHolderDesign.ai  SonarWithOscillatorHoles.ai  TwoPlatform.ai  backup_designs.ai  jet_mounting_plate.ai  motor_mount.ai  nvidia_robot.ai  small_motor_mount.ai  sonar_3.ai  sonar_versions.ai
hardware_templates/: JetbotPlate.ai  JetbotPlate.dxf  SonarHolders.ai  SonarHolders.dxf
(+73 files in other folders)
