<?xml version="1.0"?>
<package>
  <name>sense_and_avoid</name>
  <version>0.0.0</version>
  <description>The sense_and_avoid package</description>

  <maintainer email="jkerfs@calpoly.edu">jkerfs</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
