<?xml version="1.0"?>
<package>
  <name>lab5_dead_reckoning</name>
  <version>0.0.0</version>
  <description>Jet Lab 5</description>

  <maintainer email="jkerfs@calpoly.edu">jkerfs</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
